# toki

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
demo/: demo.py  index.html  server.py
python/: README_python.md  pyproject.toml
python/experiments/pipelines/20260502T122415Z_ft/round_000/: dataset.json
python/tests/: test_benchmark.py  test_compare.py  test_dataset.py  test_evaluate.py  test_experiment.py  test_generate.py  test_hub.py  test_leaderboard.py  test_main.py  test_mutator.py  test_pipeline.py  test_report.py  test_results.py
python/toki/: __init__.py  __main__.py  benchmark.py  compare.py  dataset.py  evaluate.py  experiment.py  finetune.py  generate.py  hub.py  leaderboard.py  mutator.py  pipeline.py  report.py  results.py
src/: config.rs  main.rs  runner.rs
tests/: integration_test.rs
