[package]
name = "toki"
version = "0.1.0"
edition = "2021"
description = "Adversarial fine-tuning lab for small language models"
license = "BUSL-1.1"

[[bin]]
name = "toki"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
opt-level = 3
