[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toki"
version = "0.5.0"
description = "Adversarial fine-tuning lab for small language models"
license = { text = "BUSL-1.1" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
hf = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.6.0",
    "datasets>=2.14.0",
    "huggingface_hub>=0.20.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["toki"]
